2009-10-09  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/menus.jl: added "Reload Appsmenu" entry

2009-10-08  Christopher Bratusek <zanghar@freenet.de>
	* ChangeLog
	* man/sawfish.texi
	* lisp/sawfish/wm/focus.jl
	* lisp/sawfish/wm/transient.jl: revert timo/kde-menu-focus branch merge, (re)merge timo/focus-revert instead

2009-10-07  Jeremy Hankins <nowan@nowan.org>
	* themes/mxflat/theme.jl: Removed bindings for Button6-Click that are no longer valid.

2009-10-07  Christopher Bratusek <zanghar@freenet.de>
	* src/events.c
	* lisp/sawfish/wm/focus.jl
	* lisp/sawfish/wm/transient.jl: merged timo/kde-menu-focus branch
	                                - Changed an ugly cond into an ugly when
					- Fix focus behaviour of KDE Run Command
					- Fix KDE focus behaviour also in transient-unmap-window
					- Ignore grab-induced enter-notify events

	* lisp/sawfish/wm/frames.jl: merged timo/frame-fix branch
	                             - added remove-frame-part-value
				     - improved update-frame-font-color

	* lisp/sawfish/wm/frames.jl
	* lisp/sawfish/wm/windows.jl: merged timo/kde4 branch
	                              -- (merged earlier already)
				      - fixed doc-window properties

	* src/keys.h: merged timo/mouse branch
	              - removed built-in (hackish) support for Mousebuttons 6 - 9
		      - use evdev if you need support for those buttons, instead

	* lisp/sawfish/wm/ext/fdo-menu.jl: merged timo/fdo-fix branch
	                                   - improved find-lang-string
					   - s/\012/\n/
					   - Fix whitespace and other ugliness
					   - Fix more ugliness in find-lang-in-desktop-file and generate-menu-entry
					   - Import rep.regexp

	* src/windows.c: merged timo/race branch
	                 - Wrap most of add_window in rep_PUSHGC/rep_POPGC

	* Makefile.in: don't try to remove ancient sawmill* binaries

	* man/news.texi: added entries for above changes
	                 reworked sawfish 1.6.0 section partially
