@@ -1,6 +1,8 @@
 2009-10-09  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/menus.jl: added "Reload Appsmenu" entry
 
+	* src/windows.c: more work on the race condition fix [Janek Kozicki]
+
 2009-10-08  Christopher Bratusek <zanghar@freenet.de>
 	* ChangeLog
 	* man/sawfish.texi
